src/Chatbot.css
*,
*::before,
*::after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
    margin-top: 40px;
    margin-bottom: 40px;
}

.chat-window {
    width: 75vw;
    height: 75vh;
    margin: auto;
    border: 1px solid #d5d5d5;
    background-color: gray;
}

.conversationHistory-view {
    width: 100%;
    height: 80%;
    padding: 20px 40px;
    background-color: #fdfcfb;
    overflow-y: scroll;

}

.chat-bubble {
    font-size: 20px;
    margin-bottom: 20px;
    width: 100%;
    display: flex;
    justify-content: flex-end;
}

.chat-bubble.ai {
    justify-content: flex-start;
}

.chat-bubble.ai .chat-content {
    background-color: rgb(56, 102, 228);
}

.chat-content {
    display: inline-block;
    padding: 8px 15px;
    background-color: rgba(128, 128, 128, 0.979);
    color: white;
    border-radius: 10px;
}

